--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_gamepad
-description: An iOS gamepad library for Flutter. (Android support coming soon.)
+description: A gamepad library for Flutter.
 version: 0.3.2
-homepage: https://github.com/RainwayApp/flutter_gamepad
+homepage: https://github.com/MarsBoundMarty/flutter_gamepad
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
