--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.example.flutter_gamepad
-    pluginClass: FlutterGamepadPlugin
+    platforms:
+      android:
+        package: com.example.flutter_gamepad
+        pluginClass: FlutterGamepadPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
